--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
         <script defer src="script.js"></script>
+        <link href="css/style.css" rel="stylesheet">
+        <link href="css/section.css" rel="stylesheet">
 </head>
 <body>
     <main class="container">
@@ -18,9 +20,9 @@
         <section class="section">
             <h2 class="section__header">Dodaj nowe zadanie</h2>
             <div class="section__body"></div>
-    <form class="js-form">
-        <input class="js-newTask">
-        <button>Dodaj zadanie</button>
+    <form class="form js-form">
+        <input class="form__input js-newTask" placeholder="Co jest do zrobienia?">
+        <button class="form__button">Dodaj zadanie</button>
     </form>
     <ul class="js-tasks">
 
