--- a/index.html
+++ b/index.html
@@ -8,25 +8,34 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <script defer src="script.js"></script>
+        
         <link href="css/style.css" rel="stylesheet">
         <link href="css/section.css" rel="stylesheet">
+        <link href="css/form.css" rel="stylesheet">
+        <link href="css/container.css" rel="stylesheet">
+        <link href="css/tasks.css" rel="stylesheet">
+        <script defer src="script.js"></script>
 </head>
-<body>
+<body class="body">
     <main class="container">
         <header>
             <h1>Lista zadań</h1>
         </header>
         <section class="section">
             <h2 class="section__header">Dodaj nowe zadanie</h2>
-            <div class="section__body"></div>
-    <form class="form js-form">
-        <input class="form__input js-newTask" placeholder="Co jest do zrobienia?">
+            <div class="section__body">
+                <form class="form js-form">
+        <input class="form__input js-newTask" placeholder="Co jest do zrobienia?">   
         <button class="form__button">Dodaj zadanie</button>
-    </form>
-    <ul class="js-tasks">
-
-    </ul>
+                </form>
+            </div>
+            </section>
+            <section class="section">
+                <h2 class="section__header">Lista zadań</h2>
+                <div class="section__body">
+    <ul class="tasks js-tasks"></ul>        
+    </div>
+</section>
 </main>
 </body>
 </html>
