--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="css/form.css" rel="stylesheet">
     <link href="css/container.css" rel="stylesheet">
     <link href="css/tasks.css" rel="stylesheet">
+    <link href="css/buttons.css" rel="stylesheet">
     <script defer src="script.js"></script>
 </head>
 
@@ -24,7 +25,7 @@
             <h1>Lista zadań</h1>
         </header>
         <section class="section">
-            <h2 class="section__header">Dodaj nowe zadanie</h2>
+            <h2 class="section__tittle">Dodaj nowe zadanie</h2>
             <div class="section__body">
                 <form class="form js-form">
                     <input class="form__input js-newTask" placeholder="Co jest do zrobienia?">
@@ -33,8 +34,9 @@
             </div>
         </section>
         <section class="section">
-            <h2 class="section__header">Lista zadań</h2>
-            <div class="section__body">
+            <header class="section__header"></header>
+            <h2 class="section__tittle">Lista zadań</h2>
+                <div class="buttons js-buttons"></div>
                 <ul class="tasks js-tasks"></ul>
             </div>
         </section>
