div added to html

--- a/index.html
+++ b/index.html
@@ -34,12 +34,16 @@
             </div>
         </section>
         <section class="section">
-            <header class="section__header"></header>
+            <header class="section__header">
+            
             <h2 class="section__tittle">Lista zadań</h2>
-                <div class="buttons js-buttons"></div>
+            <div class="buttons js-buttons"></div>
+            </header>
+               <div class="section__body">
                 <ul class="tasks js-tasks"></ul>
-            </div>
+            </div>    
         </section>
+    
     </main>
 </body>
 
